# pipe_downloader

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: rust_arm.yml
.github/workflows/: ci.yml  release.yml  rust_arm.yml
crates/pipe_downloader_lib/: Cargo.toml  README.md
crates/pipe_downloader_lib/src/: options.rs  pipe_downloader.rs  pipe_engine.rs  pipe_progress.rs  pipe_wrapper.rs
crates/pipe_files/: Cargo.toml
crates/pipe_files/src/: lib.rs
crates/pipe_mock_serve/: Cargo.toml  README.md  test_upload.py
crates/pipe_mock_serve/src/: main.rs
crates/pipe_serve/: Cargo.toml  README.md
crates/pipe_serve/src/: main.rs
crates/pipe_udp_server/: Cargo.toml  test_ext.bat
crates/pipe_udp_server/src/: commands.rs  main.rs  world_time.rs
crates/pipe_utils/: Cargo.toml
crates/pipe_utils/src/: compression.rs  lib.rs  mockup.rs
examples/: connect.rs  download_only.rs  pipe_downloader.rs
frontend/: README.md  compile.py  index.html  package-lock.json  package.json  vite.config.ts
frontend/frontend/: index.html
frontend/frontend/assets/: index-22501a3d.css  index-89545aae.css  index-a547266c.css  index-cf0ff982.js  index-f08b4362.js  index-fbc9ba21.js  pretty-bytes-a9c69c63.js  react-5c397423.js  react-bootstrap-3001cf60.js  react-bootstrap-eb04db6d.js  react-dom-3d3b20dc.js  react-dom-9b2ad3b4.js  react-dom-ffb09b4b.js  react-icons-7e342cba.js  react-router-2028984d.js  react-router-85631594.js  react-router-dom-b23c6dc4.js  react-router-dom-f614de17.js
frontend/src/: BackendSettingsProvider.tsx  Dashboard.tsx  DateBox.tsx  ProgressPage.css  ProgressPage.tsx  WelcomePage.tsx
frontend/src/common/: BackendConfig.ts
pipe_downloader_lib/: Cargo.toml
pipe_downloader_lib/src/: lib.rs  options.rs  pipe_downloader.rs  pipe_progress.rs  pipe_utils.rs  pipe_wrapper.rs
pipe_serve/: Cargo.toml
pipe_serve/src/: main.rs
src/: lib.rs  lz4_decoder.rs  main.rs  options.rs  pipe_downloader.rs  pipe_engine.rs  pipe_progress.rs  pipe_utils.rs  pipe_wrapper.rs  tsutils.rs
static/: .gitignore  Readme.md
tests/: full_test.rs  run_test.rs
tmp/: README.txt
