[workspace]
members = [
    "pipe_downloader_lib",
    "pipe_serve",
]

[workspace.package]
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.4.2"
edition = "2021"
license = "MIT"

[[bin]]
name = "pipe_downloader"

[package]
name = "pipe_downloader"
description = "Fast downloader + extractor for *.tar.gz, *tar.lz4 and *.tar.bz2 files."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[workspace.dependencies]
anyhow = "^1.0.51"
serde_json = "^1.0.89"
structopt = "^0.3.26"
env_logger = "^0.10.0"
reqwest = "^0.11.12"
lz4 = "^1.24.0"
log = "^0.4.17"
flate2 = "^1.0.24"
tar = "^0.4.38"
humansize = "^2.1.2"
bzip2 = "^0.4.3"
serde = "^1.0.147"
lz4_flex = "^0.9.5"
chrono = "^0.4.23"
tokio = "^1.22"
warp = "^0.3.3"
rand = "^0.8.5"
fake = "^2.5.0"
sha256 = "^1.1.1"
xz2 = "^0.1.7"

[dependencies]
pipe_downloader_lib = { path = "pipe_downloader_lib", version = "0.4.2" }

anyhow = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
sha256 = { workspace = true }
warp = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
rand = { workspace = true }
fake = { workspace = true, features=['derive'] }
tar = { workspace = true }
lz4 = { workspace = true }
pipe_files = {path = "crates/pipe_files", version = "0.4.2" }

[profile.release]
lto = true
strip = true