[workspace]
members = [
    "crates/*",
]

[workspace.package]
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.5.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "pipe_downloader"

[package]
name = "pipe_downloader"
description = "Fast downloader + extractor for *.tar.gz, *tar.lz4 and *.tar.bz2 files."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[workspace.dependencies]
anyhow = "^1.0.51"
serde_json = "^1.0.89"
structopt = "^0.3.26"
env_logger = "^0.10.0"
reqwest = { version = "^0.11.12", default-features = false, features = ["blocking"] }
lz4 = "^1.24.0"
log = "^0.4.17"
flate2 = "^1.0.24"
tar = "^0.4.38"
humansize = { version = "^2.1.2", default-features = false, features = ["no_alloc"] }
bzip2 = "^0.4.3"
serde = "^1.0.147"
lz4_flex = "0.10.0"
chrono = { version = "^0.4.23", default-features = false }
tokio = { version = "^1.22", default-features = false, features = ["rt", "macros"] }
warp = "^0.3.3"
rand = "^0.8.5"
fake = "^2.5.0"
sha256 = "^1.1.1"
xz2 = "^0.1.7"
rust-embed = "6.4.2"
mime_guess = "2.0.4"
actix-cors = "0.6.4"
actix-web = "4.1.0"

[dependencies]
pipe_downloader_lib = { path = "crates/pipe_downloader_lib", version = "0.5.0" }
anyhow = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
env_logger = { workspace = true }
tar = { workspace = true }
lz4 = { workspace = true }
bzip2 = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
actix-cors = { workspace = true }
actix-web = { workspace = true }

[dev-dependencies]
sha256 = { workspace = true }
warp = { workspace = true }
rand = { workspace = true }
fake = { workspace = true, features = ['derive'] }
pipe_utils = { path = "crates/pipe_utils" }
reqwest = { workspace = true }

[profile.release]
lto = true
strip = true