[package]
name = "pipe_downloader_lib"
description = "Core library - fast downloader + extractor library for *.tar.gz, *tar.lz4 and *.tar.bz2 files."
authors.workspace = true
version = "0.8.0"
edition.workspace = true
license.workspace = true

[lib]
name = "pipe_downloader_lib"

[features]
default = ["serde", "with-lz4"]
with-lz4 = ["lz4"]
lz4-rust = ["lz4_flex"]
serde = ["dep:serde"]

[dependencies]
reqwest = { workspace = true }
anyhow = { workspace = true }
lz4 = { workspace = true, optional = true }
log = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
humansize = { workspace = true }
bzip2 = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
lz4_flex = { workspace = true, optional = true }
chrono = { workspace = true, default-features = false, features = ["std", "serde"] }
xz2 = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
