[package]
name = "pipe_mock_serve"
description = "Simple static server based on warp"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
structopt = { workspace = true }
actix-web = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
fastrand = { workspace = true }
actix-multipart = { workspace = true }