[package]
name = "pipe_udp_server"
description = "Udp server for perf testing"
authors.workspace = true
version = "0.6.6"
edition.workspace = true
license.workspace = true

[dependencies]
structopt = { workspace = true }
tokio = { workspace = true, features = ["net"] }
sntpc = { version = "0.3.2" }
log = { workspace = true }
chrono = { workspace = true }
sha256 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
env_logger = {workspace = true }
